@@ -26,6 +26,7 @@ Bugs fixed
 * The warning type ``misc.highlighting_failure`` does not work
 * #3294: ``add_latex_package()`` make crashes non-LaTeX builders
 * The caption of table are rendered as invalid HTML (refs: #3287)
+* #3268: Sphinx crashes with requests package from Debian jessie
 
 
 Release 1.5.1 (released Dec 13, 2016)
